# timezone-compare

./: README.md  main.py  pyproject.toml
go/: go.mod  main.go
go/processed_data/: timezone_data.csv
python/: main.py  time_zone_data.py
python/processed_data/: timezone_data.csv
timezone_compare_go/: go.mod  main.go
timezone_compare_go/data/: timedata.csv
